@@ -31,6 +31,6 @@
 <noscript>
 				<div id="no-javascript">
 					<?php _e( 'JavaScript is off. Please enable to use all functions.', 'manduca' ); ?></div>
-    <a href="/"><?php e_( 'Ok, I enabled javascript', 'manduca'); ?></a>
+    <a href="/"><?php _e( 'Ok, I enabled javascript', 'manduca'); ?></a>
 </noscript>
 			
